# message-app-backend

./: .env.dev  .gitignore  db.sqlite3  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
MessageAppClient/: App.tsx  app.json  babel.config.js  package-lock.json  package.json  tsconfig.json
MessageAppClient/android/: settings.gradle
MessageAppClient/src/: AppBaseURL.ts  AuthContext.tsx  capitalize.ts  config.ts  logo.pngZone.Identifier
chating/: apps.py  consumers.py  middlewares.py  models.py  push.py  routing.py  serializers.py  urls.py  viewsets.py
chating/abstract/: models.py
chating/auth/: backends.py  serializers.py  views.py
chating/migrations/: 0001_initial.py  0002_alter_message_sender.py  0003_alter_chat_first_user_alter_chat_second_user.py
chating/user/: apps.py  models.py
media/827b3003-1e3e-402e-b990-6b9c94e571f9/: portfolio.html  Приклад вирішення практичної задачі.docx
message_app/: apps.py  urls.py
message_app/abstract/: models.py
message_app/auth/: apps.py  otp.py  permissions.py  serializers.py
message_app/chating/: apps.py  consumers.py  middlewares.py  models.py  push.py  serializers.py  signals.py  test_message_api.py  test_websocket.py  viewsets.py
messenger/: Dockerfile  Dockerfile.prod  asgi.py  entrypoint.prod.sh  entrypoint.sh  manage.py  mypy.ini  requirements.txt  routing.py  settings.py  urls.py  wsgi.py
messenger/message_app/: apps.py  urls.py
messenger/messenger/: asgi.py  settings.py  wsgi.py
nginx/: nginx.conf
test_stub/: useit.py  utils.py  utils.pyi
(+102 files in other folders)
