[tool.poetry]
name = "messenger"
version = "0.1.0"
description = ""
authors = ["vadjango <z9661744@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
channels = "^4.0.0"
channels-redis = "^4.1.0"
Django = "^4.2.3"
djangorestframework = "^3.14.0"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^7.1.0"}
pillow = "^10.0.0"
djangorestframework-simplejwt = "^5.2.2"
daphne = "^4.0.0"
django-extensions = "^3.2.3"
ipython = "^8.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
